[gd_scene load_steps=3 format=2]

[ext_resource path="res://SCRIPTS/SPERCTRUM4.gd" type="Script" id=1]
[ext_resource path="res://IMG/SPECTRUM.png" type="Texture" id=2]

[node name="SPERCTRUM" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
show_behind_parent = true
margin_right = 299.0
margin_bottom = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="ColorRect"]
position = Vector2( 149.492, 50.0116 )
texture = ExtResource( 2 )

[node name="HSlider" type="HSlider" parent="."]
visible = false
margin_left = 360.875
margin_top = 27.4087
margin_right = 546.875
margin_bottom = 83.4087
value = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
visible = false
margin_left = 469.337
margin_top = 17.0857
margin_right = 509.337
margin_bottom = 31.0857
text = "r"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ACTIVATION_LVL" type="Label" parent="."]
margin_left = 139.47
margin_top = 6.45414
margin_right = 296.47
margin_bottom = 20.4541
custom_colors/font_color = Color( 1, 0.345098, 0.8, 1 )
text = "0.0"
align = 2

[node name="POTENTIAL_LVL" type="Label" parent="."]
margin_left = 139.22
margin_top = 32.1907
margin_right = 296.22
margin_bottom = 46.1907
custom_colors/font_color = Color( 0.188235, 0.87451, 0.164706, 1 )
text = "0.0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PERCENTAGE" type="Label" parent="."]
margin_left = 139.455
margin_top = 56.238
margin_right = 296.455
margin_bottom = 70.238
custom_colors/font_color = Color( 0, 1, 0.717647, 1 )
text = "0%"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PERCENTAGE2" type="Label" parent="."]
margin_left = 139.205
margin_top = 80.738
margin_right = 296.205
margin_bottom = 94.738
custom_colors/font_color = Color( 0.113725, 0.501961, 1, 1 )
text = "0"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 0.949928
margin_top = 100.841
margin_right = 145.95
margin_bottom = 114.841
text = "CHOSE NEURON FIRST!"
align = 1

[connection signal="changed" from="HSlider" to="." method="_on_HSlider_changed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_HSlider_value_changed"]
